--- a/public/index.html
+++ b/public/index.html
@@ -323,10 +323,11 @@
     </div>
 
     <!-- Scripts -->
-    <script src="https://unpkg.com/@popperjs/core@2"></script>
-    <script src="https://unpkg.com/tippy.js@6"></script>
-    <script src="https://unpkg.com/papaparse@5"></script>
-    <script src="js/utils.js"></script>
-    <script src="js/main.js"></script>
+    <script src="https://unpkg.com/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+    <script src="https://unpkg.com/tippy.js@6.3.7/dist/tippy-bundle.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+    <script src="js/utils.js?v=1750601575067"></script>
+    <script src="js/main.js?v=1750601575067"></script>
+    <script src="js/settings.js?v=1750601575067"></script>
 </body>
 </html> 
