--- a/public/settings.html
+++ b/public/settings.html
@@ -291,9 +291,9 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="https://unpkg.com/tippy.js@6.3.7/dist/tippy-bundle.umd.min.js"></script>
+    <script src="https://unpkg.com/tippy.js@6.3.7/dist/tippy.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
-    <script src="js/utils.js?v=1750601575067"></script>
-    <script src="js/settings.js?v=1750601575067"></script>
+    <script src="js/utils.js?v=1750601575068"></script>
+    <script src="js/settings.js?v=1750601575068"></script>
 </body>
 </html> 
