feat: implement auto-save and improve settings UI
- Remove Save Configuration button in favor of auto-save
- Add immediate save on input change for all form fields
- Add visual feedback when settings are saved
- Fix Advanced section toggle functionality
- Update log message format
- Add error handling and user feedback

--- a/public/settings.html
+++ b/public/settings.html
@@ -209,13 +209,7 @@
                 </div>
             </section>
 
-            <!-- Save Configuration Action -->
-            <div class="action-buttons centered">
-                <button type="button" id="save-all-settings" class="btn-pill">
-                    Save Configuration
-                </button>
-            </div>
-
+            <!-- Spacing after the last section -->
             <br>
             <br>
 
